syntax = "proto3";

package route256.loms.pkg.api.order.v1;

option go_package = "route256/loms/pkg/order/v1;order";

// imports

service Order {
    rpc Create(CreateRequest) returns (CreateResponse) {}
    rpc GetInfo(GetInfoRequest) returns (GetInfoResponse) {}
    rpc Pay(PayRequest) returns (PayResponse) {}
    rpc Cancel(CancelRequest) returns (CancelResponse) {}
}

message Item {
    uint32 sku = 1;
    uint32 count = 2;
}

message CreateRequest {
    int64 user = 1;
    repeated Item items = 2;
}

message CreateResponse {
    int64 orderID = 1;
}

message GetInfoRequest {
    int64 orderID = 1;
}

enum OrderStatus {
    NEW = 0;
    AWAITING_PAYMENT = 1;
    FAILED = 2;
    PAYED = 3;
    CANCELLED = 4;
}

message GetInfoResponse {
    OrderStatus status = 1;
    int64 user = 2;
    repeated Item items = 3;
}

message PayRequest {
    int64 orderID = 1;
}

message PayResponse {

}

message CancelRequest {
    int64 orderID = 1;
}

message CancelResponse {

}
